--- a/1_Preliminaries.ipynb
+++ b/1_Preliminaries.ipynb
@@ -121,12 +121,14 @@
     "batch_size = 10\n",
     "\n",
     "# Obtain the data loader.\n",
-    "data_loader = get_loader(data_dirpath=Path('./data'),\n",
-    "                         transform=transform_train,\n",
-    "                         mode='train',\n",
-    "                         batch_size=batch_size,\n",
-    "                         vocab_threshold=vocab_threshold,\n",
-    "                         vocab_from_file=False)"
+    "data_loader = get_loader(\n",
+    "    data_dirpath=Path('./data'),\n",
+    "    transform=transform_train,\n",
+    "    mode='train',\n",
+    "    batch_size=batch_size,\n",
+    "    vocab_threshold=vocab_threshold,\n",
+    "    vocab_from_file=False\n",
+    ")"
    ]
   },
   {
